--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "bs-custom-file-input": "^1.3.4",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
     "joi": "^17.6.0",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "mongoose-paginate-v2": "^1.7.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
+    "sanitize-html": "^2.7.1"
   }
 }
