--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "bs-custom-file-input": "^1.3.4",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
@@ -19,6 +20,8 @@
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "flash": "^1.1.0",
+    "helmet": "^6.0.0",
     "joi": "^17.6.0",
     "mongoose": "^6.5.4",
     "mongoose-paginate-v2": "^1.7.0",
