--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "bs-custom-file-input": "^1.3.4",
+    "cloudinary": "^1.31.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.2",
@@ -27,6 +28,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
     "mongoose-paginate-v2": "^1.7.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
